--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-h1 {
-    color: rgb(0, 0, 0);
-    text-align: center;
-    background-color: #faefc9;
-    padding-top: 8%;
-    padding-bottom: 8%;
-   } 
-
-   .carrousel-inner {
-    height: 500px;
-  }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Josefin Sans's, sans-serif;
+}
+.hero{
+  height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../img/Yanyt\ \(1\).jpg);
+}
