--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,7 @@
 .hero{
   height: 100vh;
   width: 100%;
-  
-  background: url(../img/Yanytaa.png);
+  background: url(../img/4d5as5d64as5das56d4as56da465.jpg);
   background-color: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
   background-size: cover;
   background-position: center;
@@ -16,7 +15,7 @@
 nav{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding-top: 40px;
   padding-left: 10%;
   padding-right: 10%;
@@ -24,5 +23,32 @@ nav{
 .logo {
   color: white;
   font-size: 28px;
-  
+}
+nav ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 20px;
+}
+nav ul li a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+nav ul li a:hover{
+  color: #ea1538;
+  transition: .3s;
+}
+button{
+  border: none;
+  background: #ea1538;
+  padding: 12px 30px;
+  border-radius: 30px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  transition: .4s;
+}
+button:hover{
+  transform: scale(1.3);
+  cursor: pointer;
 }
