--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 .hero{
   height: 100vh;
   width: 100%;
-  background: url(../img/4d5as5d64as5das56d4as56da465.jpg);
+  background: url(../img/BannerFlorys.jpg);
   background-color: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
   background-size: cover;
   background-position: center;
@@ -21,7 +21,7 @@ nav{
   padding-right: 10%;
 }
 .logo {
-  color: white;
+  color: black;
   font-size: 28px;
 }
 nav ul li{
@@ -30,13 +30,13 @@ nav ul li{
   padding: 10px 20px;
 }
 nav ul li a{
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
+  color: black !important; 
+  text-decoration: none !important;
+  font-weight: bold !important;
 }
 nav ul li a:hover{
-  color: #ea1538;
-  transition: .3s;
+  color: #ea1538 !important;
+  transition: .3s !important;
 }
 button{
   border: none;
@@ -51,4 +51,21 @@ button{
 button:hover{
   transform: scale(1.3);
   cursor: pointer;
+}
+#navbarDropdown{
+  color: black;
+  font-weight: bold;
+}
+#navbarDropdown:hover{
+  color: #ea1538;
+  transition: .3s;
+}
+#navbarDropdown a{
+  color: black !important;
+  font-weight: bold !important;
+}
+#navbarDropdown a:hover{
+  color: #ea1538 !important;
+  transition: .3s !important;
+
 }
