--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 .hero{
   height: 100vh;
   width: 100%;
-  background: url(../img/BannerFlorys.jpg);
+  background: url(../img/Inicio5.jpg);
   background-color: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
   background-size: cover;
   background-position: center;
@@ -68,4 +68,18 @@ button:hover{
   color: #ea1538 !important;
   transition: .3s !important;
 
+}
+.flex img {
+  max-width: 100%;
+  display: block;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.flex > div {
+  flex: 1 1 200px;
+  margin: 10px;
 }
