--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,133 @@
-h1 {
-    color: rgb(0, 0, 0);
-    text-align: center;
-    margin-top: 8%;
-    background-color: bisque;
-   } 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+*
+{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+}
+body
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+    flex-direction: column;
+	gap: 30px;
+    background: #1d2b3a;
+}
+.inputBox
+{
+ position: relative;
+ width: 300px;
+ height: 70px;
+ left: 50px;
+}
+.inputBox input
+{
+ width: 100%;
+padding: 10px;
+border: 1px solid #1d2b3a(255, 0, 0, 0.25);
+  background: #fff;
+border-radius: 5px;
+outline: none;
+	color:rgb #a6a6a6(0, 0, 0)
+font-size: 1em;
+transition: 0.5s;
+}
+.inputBox span 
+{
+position: absolute;
+left: 0;
+padding: 10px;
+pointer-events: none;
+font-size: 1em;
+color: rgba(3, 3, 3, 0.25);
+text-transform: uppercase;
+transition: 0.5s;	
+}
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span
+{
+	color:#00dfc4;
+	transform: translateX(10px) translateY(-7px);
+	font-size: 0.65em;
+	padding: 0 10px;
+	background: #1d2b3a;
+	border-left: 1px solid #00dfc4;
+	border-right: 1px solid #00dfc4;
+	letter-spacing: 0.2em;
+}
+.inputBox input:valid,
+.inputBox input:focus
+{
+	border: 1px solid #00dfc4;
 
-   
+}
+.menu
+{
+height: 700px;
+width: 100%;
+}
+.center
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.center inputBox 
+{
+	text-align: center;
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid silver;
+}
+.senha
+{
+	padding: 0 50px;
+	box-sizing: border-box;
+}
+
+.pass
+{
+	margin: -5px 0 20px 5px;
+	color: #a6a6a6;
+	cursor: pointer;
+}
+.pass:hover
+{
+	text-decoration: underline;
+}
+input[type="submit"]
+{
+	width: 100%;
+	height: 50px;
+	border: 1px solid;
+	background:#1d2b3a;
+	border-radius: 25px;
+	font-size: 18px;
+	color: #fdfdfd;
+	font-weight: 200;
+	cursor: pointer;
+	outline: none;
+}
+.signup_link
+{
+	margin: 30px 0;
+	text-align: center;
+	font-size: 16px;
+	color: #666666;
+}
+.signup_link a
+{
+	color: #2691d9;
+	text-decoration: none;
+}
+.signup_link a:hover
+{
+	text-decoration: underline;
+}
