--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,11 @@ transition: 0.5s;
 }
 .menu
 {
-height: 700px;
-width: 100%;
+	position: absolute;
+height: 1000px;
+width: 130%;
+left: -57px;
+
 }
 .center
 {
@@ -77,10 +80,10 @@ width: 100%;
   transform: translate(-50%, -50%);
   width: 400px;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 10px;  
 }
 
-.center inputBox 
+.center h1
 {
 	text-align: center;
 	padding: 0 0 20px 0;
