--- a/src/index.css
+++ b/src/index.css
@@ -25,13 +25,13 @@ body
 }
 .inputBox input
 {
- width: 100%;
+width: 100%;
 padding: 10px;
 border: 1px solid #1d2b3a(255, 0, 0, 0.25);
-  background: #fff;
+background: #fff;
 border-radius: 5px;
 outline: none;
-	color:rgb #a6a6a6(0, 0, 0)
+color:rgb #a6a6a6(0, 0, 0);
 font-size: 1em;
 transition: 0.5s;
 }
@@ -134,13 +134,6 @@ input[type="submit"]
 {
 	text-decoration: underline;
 }
-{
-	margin:0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family:'Poppins',sans-serif;
-}
-
 body
 {
 	display: flex;
@@ -153,8 +146,8 @@ body
 .box
 {
 	position: relative;
-	width: 250px;
-	height: 250px;
+	width: 300px;
+	height: 300px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -240,27 +233,32 @@ body
 	opacity: 0;
 	transition: 0.5s;
 }
-.box:hover .hot
+.box:hover .content
 {
 	opacity: 1;
 }
-.hot h2
+.box .content h2
 {
 		font-size: 20px;
 		color: #fff;
 		font-weight: 500;
-		line-height: 20px;
+		line-height: 2px;
 		letter-spacing: 1px;
 }
-.hot h2 span
+.box.content h2 span
 {
 	font-size: 14px;
 	color: #fff;
-	font-weight: 200;
+	font-weight: 500;
 	letter-spacing: 2px;
 }
 
-.rom
-{
-	dis
+.imgBx{
+	float: left;
+	width: 33.33%;
 }
+  .box:after {
+	content: "";
+	clear: both;
+	display: table;
+  }
