--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 .hero{
   height: 100vh;
   width: 100%;
-  background: url(../img/Inicio5.jpg);
+  /* background: url(../img/Inicio5.jpg); */
   background-color: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
   background-size: cover;
   background-position: center;
@@ -78,7 +78,7 @@ button:hover{
 .flex {
   display: flex;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 2000px;
   margin: 0 auto;
 }
 .flex > div {
@@ -88,4 +88,13 @@ button:hover{
 h1 {
   text-align: center;
   margin-top: 100px;
+}
+body {
+  background-image: url(../img/Inicio77.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#aaaa {
+  padding-left: 150px;
 }
