--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body
 	min-height: 100vh;
     flex-direction: column;
 	gap: 30px;
-    background: #1d2b3a;
+	background: #1d2b3a;
 }
 .inputBox
 {
@@ -141,13 +141,13 @@ body
 	align-items: center;
 	flex-wrap: wrap;
 	min-height: 100vh;
-	background: #010615;
+	background-image: url('../img/Anime\ Wallpaper\ Gif\ Hd\ \(2\).gif');
 }
 .box
 {
 	position: relative;
-	width: 300px;
-	height: 300px;
+	width: 200px;
+	height: 200px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -157,7 +157,7 @@ body
 }
 .box:hover
 {
-	height: 400px;
+	height: 300px;
 }
 .box .imgBx
 {
@@ -224,9 +224,9 @@ body
 	left: 10px;
 	right: 10px;
 	bottom: 10px;
-	height: 90px;
+	height: 70px;
 	background: rgba(0,0,0,0.4);
-	display: flex;
+
 	justify-content: center;
 	align-items: center;
 	text-align: center;
@@ -242,23 +242,17 @@ body
 		font-size: 20px;
 		color: #fff;
 		font-weight: 500;
-		line-height: 2px;
+		line-height: 20px;
 		letter-spacing: 1px;
 }
-.box.content h2 span
+.box .content h2 span
 {
 	font-size: 14px;
 	color: #fff;
-	font-weight: 500;
-	letter-spacing: 2px;
+	font-weight: 200;
+	letter-spacing: 1px;
 }
-
-.imgBx{
-	float: left;
-	width: 33.33%;
-}
-  .box:after {
-	content: "";
-	clear: both;
-	display: table;
+  main.cards 
+  {
+	display: flex;
   }
