--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,6 @@ transition: 0.5s;
 height: 1000px;
 width: 130%;
 left: -57px;
-
 }
 .center
 {
@@ -256,3 +255,119 @@ body
   {
 	display: flex;
   }
+
+
+
+
+
+
+
+
+
+
+  .boxsobre
+{
+	position: absolute;
+	width: 500px;
+	height: 290px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 40px;
+	background: #060c21;
+	transition: 0.5s;
+	left: -0px;
+}
+.boxsobre:hover
+{
+	height: 500px;
+}
+.boxsobre .game
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+}
+.boxsobre .game img
+{
+	max-width: 100%;
+	opacity: 0.1;
+	transition: 0.5;
+}
+.boxsobre:hover .game img
+{
+	opacity: 1;
+}
+.boxsobre:before
+{
+	content: '';
+	position:absolute;
+	top: -2px;
+	left: -2px;
+	right: -2px;
+	bottom: -2px;
+	background: #fff;
+	z-index: -1px;
+}
+.boxsobre ::after
+{
+	content: '';
+	position: absolute;
+	top: -2px;
+	left: -2px;
+	right: -2px;
+	bottom: -2px;
+	z-index: -2;
+	filter: blur(40px);
+}
+.boxsobre .texto
+{
+	position: absolute;
+	bottom: 0;
+	left: 10px;
+	right: 10px;
+	bottom: 10px;
+	height: 150px;
+	background: rgba(0,0,0,0.4);
+
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	opacity: 0;
+	transition: 0.5s;
+}
+.boxsobre:hover .texto
+{
+	opacity: 1;
+}
+.boxsobre .texto h2
+{
+		font-size: 20px;
+		color: #fff;
+		font-weight: 5px;
+		line-height: 20px;
+		letter-spacing: 1px;
+}
+.boxsobre .texto h2 span
+{
+	font-size: 14px;
+	color: #fff;
+	font-weight: 500px;
+	letter-spacing: 1px;
+}
+.superbox
+{
+ left: -200px;
+ height: 500px;
+ 
+}
+.superxob
+{
+ left: 200px;
+ height: 500px;
+
+}
