--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,9 @@ transition: 0.5s;
 .menu
 {
 	position: absolute;
-height: 1000px;
-width: 130%;
-left: -57px;
+height: 10px;
+width: 10%;
+left: 500px;
 }
 .center
 {
@@ -370,4 +370,108 @@ body
  left: 200px;
  height: 500px;
 
+}
+
+.boxsobre
+{
+	position: absolute;
+	width: 500px;
+	height: 290px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 40px;
+	background: #060c21;
+	transition: 0.5s;
+	left: -0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ul
+{
+	width: 880px;
+	list-style: none;
+	display: flex;
+	margin: 100px auto;
+}
+.min
+{
+	width: 200px;
+	padding: 10px;
+	
+}
+.lut
+{
+    visibility: hidden;
+	opacity: 0;
+}
+.lut:target
+{
+	opacity: 1;
+	visibility: visible;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+.lut_img
+{
+	width: 1000px;
+	margin: 150px auto;
+}
+.btn
+{
+	color: #fff;
+	font-family: Arial;
+	text-decoration: none;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	font-size: 40px;
+	text-align: center;
+}
+#prev
+{
+	left: 5%;
+	top: 45%;
+}
+#next
+{
+	right: 5%;
+	top: 45%;
+}
+#close
+{
+	top: 0;
+	right: 2%;
+}
+.lut_img img
+{
+	opacity: 0;
+}
+.lut:target .lut_img img
+{
+	opacity: 1;
+	transition: opacity ;
 }
